# Project_3

CAM_esp32/: CMakeLists.txt  README.md  partitions.csv
CAM_esp32/main/: CAM_HTTPstream.cpp  CAM_HTTPstream.hpp  CAM_NVS.cpp  CAM_NVS.hpp  CAM_WiFi.cpp  CAM_WiFi.hpp  CAM_WiFi_NVS.cpp  CAM_WiFi_NVS.hpp  CAM_config.cpp  CAM_memorFunc.cpp  CAM_memorFunc.hpp  CAM_mqttApi.cpp  CAM_mqttApi.hpp  CAM_sensorRead.cpp  CAM_sensorRead.hpp  CMakeLists.txt  linker.lf  main.cpp
CTRL_Esp32/: CMakeLists.txt
CTRL_Esp32/main/: CMakeLists.txt
